--- a/MP3/DQN_project_MVA.ipynb
+++ b/MP3/DQN_project_MVA.ipynb
@@ -697,7 +697,7 @@
     "\n",
     "__2:__ \n",
     "\n",
-    "$$ \\pi^*(s') = arg\\max_{a'} Q^{*}(s',a') $$\n",
+    "We have that : $\\pi^*(s') = arg\\max_{a'} Q^{*}(s',a') $, meaning it's deterministic\n",
     "\\begin{align*}\n",
     "Q^{*}(s,a)&= E_{(s',a')\\sim p(.|s,a)}\\left(r(s,a) + \\gamma Q^{*}(s',a') \\right)\\\\\n",
     "        &= E_{s'\\sim p(.|s,a)\\\\a'\\sim \\pi^*(.|s')}\\left(r(s,a) + \\gamma Q^{*}(s',a') \\right)\\\\\n",
